--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="The website was created by Berkovskii Aleksei as a test task for the ITStart campaign."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Seminars</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -23,7 +22,6 @@
     <link rel="stylesheet" href="/reset.css" />
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
